# higgs-audio.cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: roadmap.md  spec.md  status.md
include/: higgs_audio.h
scripts/: export_higgs_gguf.py  export_tokenizer_artifact.py  quantize_higgs_gguf_q4_k.py
src/: higgs_audio_cli.cpp  higgs_audio_server.cpp  higgs_pipeline.cpp
